[gd_scene load_steps=9 format=3 uid="uid://c17h6gae2jjh"]

[ext_resource type="Script" path="res://components/objects/tank/tank.gd" id="1_q2qfv"]
[ext_resource type="Texture2D" uid="uid://cdtum5r02brbl" path="res://asserts/sprites/tankBody_bigRed_outline.png" id="2_o4ndq"]
[ext_resource type="Texture2D" uid="uid://c0c4nb7eu77e0" path="res://asserts/sprites/tankRed_barrel1_outline.png" id="3_t08vr"]
[ext_resource type="Texture2D" uid="uid://dx1intkg5cfp" path="res://asserts/sprites/shotThin.png" id="4_78jli"]
[ext_resource type="AudioStream" uid="uid://db3e4mb45mur4" path="res://asserts/audio/shot1.mp3" id="5_pnncv"]
[ext_resource type="AudioStream" uid="uid://cko3cvfcjcr4i" path="res://asserts/audio/idle_sound.mp3" id="6_7ngwf"]
[ext_resource type="AudioStream" uid="uid://djdrd0j23v4dt" path="res://asserts/audio/run_sound.mp3" id="6_k56nb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da33s"]
size = Vector2(108, 125)

[node name="Tank" type="CharacterBody2D"]
z_index = 1
position = Vector2(311, 133)
script = ExtResource("1_q2qfv")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_da33s")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("2_o4ndq")

[node name="Barrel" type="Sprite2D" parent="."]
position = Vector2(-7.62939e-06, 33)
scale = Vector2(1.0625, 1.26923)
texture = ExtResource("3_t08vr")

[node name="Shot" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, 99)
texture = ExtResource("4_78jli")

[node name="ShotTimer" type="Timer" parent="Shot"]
wait_time = 0.08
one_shot = true

[node name="ShotSound" type="AudioStreamPlayer2D" parent="Shot"]
position = Vector2(-1, -99)
stream = ExtResource("5_pnncv")

[node name="RunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_k56nb")

[node name="IdleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7ngwf")

[connection signal="timeout" from="Shot/ShotTimer" to="." method="_on_shot_timeout"]
